Fix scrollbar in web view

--- a/src/style.css
+++ b/src/style.css
@@ -23,11 +23,12 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 0 !important;
+  padding: 0 !important;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden !important;
+  /* background-color: #0a0f14; */
 }
 
 h1 {
@@ -36,10 +37,13 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 0 auto !important;
+  padding: 0 !important;
   text-align: center;
+}
+
+canvas {
+  display: block;
 }
 
 .logo {
